support part of image info in website
